--- a/scss/breakpoints/_large_breakpoint.scss
+++ b/scss/breakpoints/_large_breakpoint.scss
@@ -10,6 +10,16 @@
 @media (min-width:992px) {
   .header-wrapper {
     width: 950px;
+    padding-left: 0;
+    padding-right: 0;
+  }
+
+  .header-flex {
+    justify-content: flex-start;
+  }
+
+  .logo-box {
+    margin-right: auto;
   }
 
   .search-field {
@@ -20,9 +30,6 @@
     border-radius: 3px;
   }
 
-  .search-2 {
-    margin: 0 20px 0 0;
-  }
 
   .hdr-btn-div {
     display: flex;
@@ -46,13 +53,13 @@
 
   .support-btn {
     background-color: #4183d7;
-    margin-right: 20px;
+    margin-right: 15px;
   }
 
   .contact-btn {
     background-color: #999aa2;
     width: 145px;
-    margin-right: 20px;
+    margin-right: 15px;
     color: white;
   }
 
@@ -62,6 +69,9 @@
 
   .contact-btn:hover {
     background-color: #84858f;
+  }
+
+  .search-2 {
   }
 
 }
