--- a/scss/breakpoints/_medium_breakpoint.scss
+++ b/scss/breakpoints/_medium_breakpoint.scss
@@ -18,13 +18,11 @@
 
   .search-2 {
     display: inline-block;
-    align-items: center;
     height:           56px;
-    margin: 0 20px;
   }
 
   .search-field {
-    padding: 10px;
+    padding: 0 10px;
     font-size: 17px;
     border: 1px solid grey;
     float: left;
@@ -42,7 +40,7 @@
     border-style:     none;
     font-size:        1.8rem;
     color:            white;
-    float: left;
+    cursor: pointer;
   }
 
   .search-btn:hover {
