--- a/scss/partials/_carousel.scss
+++ b/scss/partials/_carousel.scss
@@ -100,28 +100,28 @@ font-size: 1.2rem;
 }
 
 #caro1 {
-  background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url(../img/carousel/web-design.jpg);
+  background: linear-gradient(270deg,transparent 25%,#000), url(../img/carousel/web-design.jpg);
 
 }
 
 #caro2 {
-  background-image: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url(../img/carousel/it-support.jpg);
+  background: linear-gradient(270deg,transparent 25%,#000), url(../img/carousel/it-support.jpg);
 }
 
 #caro3 {
-  background-image: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url(../img/carousel/telecoms-services.jpg);
+  background: linear-gradient(270deg,transparent 25%,#000), url(../img/carousel/telecoms-services.jpg);
 }
 
 #caro4 {
-  background-image: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url(../img/carousel/bespoke-software.jpg);
+  background: linear-gradient(270deg,transparent 25%,#000), url(../img/carousel/bespoke-software.jpg);
 }
 
 #caro5 {
-  background-image: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url(../img/carousel/digital-marketing.jpg);
+  background: linear-gradient(270deg,transparent 25%,#000), url(../img/carousel/digital-marketing.jpg);
 }
 
 #caro6 {
-  background-image: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url(../img/carousel/cyber-security.jpg);
+  background: linear-gradient(270deg,transparent 25%,#000), url(../img/carousel/cyber-security.jpg);
 }
 
 /* Combinant Selectors */
