--- a/scss/partials/_header.scss
+++ b/scss/partials/_header.scss
@@ -1,7 +1,7 @@
 @use '../abstracts' as *;
 
 .header-wrapper {
-	padding: 20px 0px;
+	padding: 20px 15px;
 	width:   100%;
 	height:  auto;
 }
@@ -18,6 +18,7 @@
 	width:     100%;
 	height:    auto;
 	max-width: 402px;
+	margin-right: 15px;
 }
 
 .img-shrink {
@@ -27,7 +28,6 @@
 
 .phone-box {
   font-size: 2rem;
-  margin:    0 20px;
 
   // margin-top: 30px;
 	padding:         5px;
@@ -55,14 +55,15 @@
   width:            60px;
 	height:           56px;
 	padding:          5px 15px;
+	cursor: pointer;
+	margin-left: 15px;
   // margin-top: 19px;
 }
 
 .burger-bar {
 	background-color: white;
-	height: 4px;
+	height: 3px;
 	width: 30px;
-	border-radius: 2px;
 	margin-bottom: 1px;
 }
 
@@ -104,7 +105,7 @@
 	background-position: 99% 50%;
   background-color:    rgba(0,0,0,.1);
 	color:               #555;
-	font-family:         poppins-bold !important;
+	font-family:         poppins-bold;
 
 
 
